--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
             <a href="comparisons/franchise.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
                     <div class="card-preview preview-franchise">
-                        <span class="preview-icon">🦎</span>
+                        <span class="preview-icon">🦎💥</span>
                         <span style="font-size: 36px; color: white; opacity: 0.9;">VS</span>
-                        <span class="preview-icon">🎒</span>
+                        <span class="preview-icon">🧳❤️</span>
                     </div>
                 </div>
                 <div class="card-content">
