--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
             width: 100%;
             height: 100%;
             background: 
-                radial-gradient(circle at 25% 50%, rgba(231,76,60,0.4) 0%, transparent 40%),
+                radial-gradient(circle at 25% 50%, rgba(241,196,15,0.4) 0%, transparent 40%),
                 radial-gradient(circle at 50% 50%, rgba(46,204,113,0.4) 0%, transparent 40%),
-                radial-gradient(circle at 75% 50%, rgba(155,89,182,0.4) 0%, transparent 40%);
+                radial-gradient(circle at 75% 50%, rgba(255,152,0,0.4) 0%, transparent 40%);
         }
         
         .preview-genres {
@@ -188,9 +188,9 @@
             height: 100%;
             background: 
                 radial-gradient(circle at 20% 30%, rgba(52,152,219,0.5) 0%, transparent 30%),
-                radial-gradient(circle at 70% 60%, rgba(231,76,60,0.4) 0%, transparent 35%),
+                radial-gradient(circle at 70% 60%, rgba(241,196,15,0.4) 0%, transparent 35%),
                 radial-gradient(circle at 40% 70%, rgba(241,196,15,0.3) 0%, transparent 25%),
-                radial-gradient(circle at 80% 20%, rgba(155,89,182,0.4) 0%, transparent 30%);
+                radial-gradient(circle at 80% 20%, rgba(255,152,0,0.4) 0%, transparent 30%);
         }
         
         .preview-prefectures {
@@ -414,7 +414,7 @@
             <!-- Directors Comparison -->
             <a href="comparisons/directors.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
-                    <div class="card-preview preview-directors">
+                    <div class="card-preview preview-directors"><div style="display: flex; gap: 30px; align-items: center; justify-content: center; position: relative; z-index: 1;"><span style="font-size: 36px; color: #f1c40f; text-shadow: 0 2px 10px rgba(241,196,15,0.5);">黒澤</span><span style="font-size: 36px; color: #2ecc71; text-shadow: 0 2px 10px rgba(46,204,113,0.5);">小津</span><span style="font-size: 36px; color: #ff9800; text-shadow: 0 2px 10px rgba(255,152,0,0.5);">溝口</span></div>
                     </div>
                 </div>
                 <div class="card-content">
