--- a/index.html
+++ b/index.html
@@ -639,11 +639,11 @@
             <a href="comparisons/directors_map.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
                     <div class="card-preview preview-directors-map">
-                        <span class="directors-map-icon">🎬</span>
+                        <span class="directors-map-icon">📣</span>
                     </div>
                 </div>
                 <div class="card-content">
-                    <span class="card-badge">🎬 Directors</span>
+                    <span class="card-badge">📣 Directors</span>
                     <h2 class="card-title">Director Power by Region</h2>
                     <p class="card-title-jp">都道府県別映画監督</p>
                     <p class="card-description">
