Refresh visualizations with Dec 2025 data + Imagination Gap viz

--- a/main.html
+++ b/main.html
@@ -647,32 +647,29 @@
         // CONFIGURATION - GitHub Pages (<25MB chunks)
         // ============================================================
                 const DATA_BASE_URL = './';
-        const RANDOM_SUFFIX = 'b66483cb668e1037';
+        const RANDOM_SUFFIX = '8vrpntw92934txuz';
         
         const DATA_FILES = {
-            meta: 'cm_meta_b66483cb668e1037.json',
+            meta: 'cm_meta_8vrpntw92934txuz.json',
             filming: [
-                'cm_film_b66483cb668e1037_1.json',
-                'cm_film_b66483cb668e1037_2.json',
-                'cm_film_b66483cb668e1037_3.json',
-                'cm_film_b66483cb668e1037_4.json',
-                'cm_film_b66483cb668e1037_5.json',
-                'cm_film_b66483cb668e1037_6.json'
+                'cm_film_8vrpntw92934txuz_1.json',
+                'cm_film_8vrpntw92934txuz_2.json',
+                'cm_film_8vrpntw92934txuz_3.json',
+                'cm_film_8vrpntw92934txuz_4.json',
+                'cm_film_8vrpntw92934txuz_5.json',
+                'cm_film_8vrpntw92934txuz_6.json'
             ],
             represented: [
-                'cm_repr_b66483cb668e1037_1.json',
-                'cm_repr_b66483cb668e1037_2.json',
-                'cm_repr_b66483cb668e1037_3.json',
-                'cm_repr_b66483cb668e1037_4.json',
-                'cm_repr_b66483cb668e1037_5.json',
-                'cm_repr_b66483cb668e1037_6.json',
-                'cm_repr_b66483cb668e1037_7.json',
-                'cm_repr_b66483cb668e1037_8.json',
-                'cm_repr_b66483cb668e1037_9.json',
-                'cm_repr_b66483cb668e1037_10.json',
-                'cm_repr_b66483cb668e1037_11.json',
-                'cm_repr_b66483cb668e1037_12.json',
-                'cm_repr_b66483cb668e1037_13.json'
+                'cm_repr_8vrpntw92934txuz_1.json',
+                'cm_repr_8vrpntw92934txuz_2.json',
+                'cm_repr_8vrpntw92934txuz_3.json',
+                'cm_repr_8vrpntw92934txuz_4.json',
+                'cm_repr_8vrpntw92934txuz_5.json',
+                'cm_repr_8vrpntw92934txuz_6.json',
+                'cm_repr_8vrpntw92934txuz_7.json',
+                'cm_repr_8vrpntw92934txuz_8.json',
+                'cm_repr_8vrpntw92934txuz_9.json',
+                'cm_repr_8vrpntw92934txuz_10.json'
             ]
         };
         // ============================================================
