--- a/index.html
+++ b/index.html
@@ -635,6 +635,25 @@
                 <div class="card-arrow">→</div>
             </a>
             
+            
+            <!-- Imagination Gap: Filmed vs Represented -->
+            <a href="comparisons/filmed_vs_represented.html" class="viz-card" style="text-decoration: none; color: inherit;">
+                <div class="card-preview-container">
+                    <div class="card-preview" style="background: linear-gradient(135deg, #9b59b6 0%, #3498db 100%); display: flex; align-items: center; justify-content: center;">
+                        <span style="font-size: 64px;">🎯</span>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <span class="card-badge">🗺️ Research</span>
+                    <h2 class="card-title">Imagination Gap</h2>
+                    <p class="card-title-jp">撮影地 vs 物語の舞台</p>
+                    <p class="card-description">
+                        Compare where films are shot vs. where stories are set. Discover Japan's geographic imagination — 92% more narrative locations than filming sites.
+                    </p>
+                </div>
+                <div class="card-arrow">→</div>
+            </a>
+
             <!-- Actors by Prefecture -->
             <a href="comparisons/actors.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
