Update imagination distance terminology

--- a/comparisons/imagination_distance_viz.html
+++ b/comparisons/imagination_distance_viz.html
@@ -597,8 +597,8 @@
         <div class="methodology">
             <h3>How It Works</h3>
             <p>
-                For each film with both filming locations and story mentions (from subtitles, synopses, and titles), 
-                we calculate the average position of each set. The "imagination distance" is the great-circle 
+                For each film with both filming locations and location mentions (from subtitles, synopses, and titles), 
+                we calculate the average distance between real and mentioned places captured in film. The "imagination distance" is the great-circle 
                 distance between these two centroids — measuring how far a film's narrative travels from its production reality.
             </p>
             <div class="methodology-diagram">
@@ -608,8 +608,8 @@
                 </div>
                 <div class="arrow">⟷</div>
                 <div class="centroid-box represented">
-                    <div class="centroid-label">Story Centroid</div>
-                    <div class="centroid-title" style="color: #9b59b6;">📖 Where story is set</div>
+                    <div class="centroid-label">Mentioned Centroid</div>
+                    <div class="centroid-title" style="color: #9b59b6;">📖 Places a narrative imagines</div>
                 </div>
             </div>
         </div>
