Fix data suffix to match deployed data

--- a/main.html
+++ b/main.html
@@ -647,7 +647,7 @@
         // CONFIGURATION - GitHub Pages (<25MB chunks)
         // ============================================================
                 const DATA_BASE_URL = './';
-        const RANDOM_SUFFIX = 'an3kmgywjer9wuhj';
+        const RANDOM_SUFFIX = '5bzpz225829j7p6j';
         
         const DATA_FILES = {
             meta: 'cm_meta_2a28badcae99c6b8.json',
