--- a/comparisons_staging/genres.html
+++ b/comparisons_staging/genres.html
@@ -305,7 +305,7 @@
         // =====================================================================
         // CONFIGURATION - Update this suffix after running export script!
         // =====================================================================
-        const DATA_SUFFIX = 'vpl7i1ot';
+        const DATA_SUFFIX = '053de01e9595a8d5';
         
         const META_FILE = `cg_${DATA_SUFFIX}_meta.json`;
         
