Refresh visualization data - 2025-12-21 20:35

--- a/comparisons_staging/index.html
+++ b/comparisons_staging/index.html
@@ -452,7 +452,7 @@
 </head>
 <body>
     <div style="background: linear-gradient(90deg, #e74c3c, #c0392b); color: white; text-align: center; padding: 12px; font-weight: 600; position: fixed; top: 0; left: 0; right: 0; z-index: 9999;">
-        ⚠️ STAGING ENVIRONMENT - Testing data suffix: <code style="background: rgba(0,0,0,0.3); padding: 2px 8px; border-radius: 4px;">b0a759e65b31149f</code>
+        ⚠️ STAGING ENVIRONMENT - Testing data suffix: <code style="background: rgba(0,0,0,0.3); padding: 2px 8px; border-radius: 4px;">410c4e49531b8d16</code>
         &nbsp;|&nbsp; <span style="color: #2ecc71;">When ready: <code>python3 cinemap_refresh_v4.py --promote</code></span>
     </div>
     <div style="height: 45px;"></div><!-- Spacer for fixed banner -->
@@ -537,8 +537,8 @@
                 </div>
                 <div class="card-content">
                     <span class="card-badge">Franchise</span>
-                    <h2 class="card-title">Godzilla vs Tora-san</h2>
-                    <p class="card-title-jp">ゴジラ vs 男はつらいよ</p>
+                    <h2 class="card-title">🦎 Godzilla vs Tora-san 💼</h2>
+                    <p class="card-title-jp">🦎 ゴジラ vs 男はつらいよ 💼</p>
                     <p class="card-description">
                         Compare Japan's two longest-running franchises. Adjustable cluster radius reveals geographic patterns.
                     </p>
@@ -669,7 +669,7 @@
                 </div>
                 <div class="card-content">
                     <span class="card-badge">🗺️ Research</span>
-                    <h2 class="card-title">Filmed vs Mentioned</h2>
+                    <h2 class="card-title">🧭 Filmed vs Mentioned</h2>
                     <p class="card-title-jp">撮影地 vs 物語の舞台</p>
                     <p class="card-description">
                         Choropleth map comparing where films are shot vs. where narratives are set by prefecture. Toggle between views to see geographic imagination patterns.
