Refresh visualization data - 2025-12-21 21:07

--- a/comparisons_staging/index.html
+++ b/comparisons_staging/index.html
@@ -452,7 +452,7 @@
 </head>
 <body>
     <div style="background: linear-gradient(90deg, #e74c3c, #c0392b); color: white; text-align: center; padding: 12px; font-weight: 600; position: fixed; top: 0; left: 0; right: 0; z-index: 9999;">
-        ⚠️ STAGING ENVIRONMENT - Testing data suffix: <code style="background: rgba(0,0,0,0.3); padding: 2px 8px; border-radius: 4px;">410c4e49531b8d16</code>
+        ⚠️ STAGING ENVIRONMENT - Testing data suffix: <code style="background: rgba(0,0,0,0.3); padding: 2px 8px; border-radius: 4px;">91cf2adb7fdc8186</code>
         &nbsp;|&nbsp; <span style="color: #2ecc71;">When ready: <code>python3 cinemap_refresh_v4.py --promote</code></span>
     </div>
     <div style="height: 45px;"></div><!-- Spacer for fixed banner -->
@@ -538,7 +538,7 @@
                 <div class="card-content">
                     <span class="card-badge">Franchise</span>
                     <h2 class="card-title">🦎 Godzilla vs Tora-san 💼</h2>
-                    <p class="card-title-jp">🦎 ゴジラ vs 男はつらいよ 💼</p>
+                    <p class="card-title-jp">ゴジラ vs 男はつらいよ</p>
                     <p class="card-description">
                         Compare Japan's two longest-running franchises. Adjustable cluster radius reveals geographic patterns.
                     </p>
@@ -624,11 +624,7 @@
             <!-- Studios Comparison -->
             <a href="prefectures.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
-                    <div class="card-preview preview-prefectures">
-                        <svg class="japan-silhouette" viewBox="0 0 100 150" fill="#333">
-                            <path d="M75,20 Q80,25 78,35 Q85,40 80,50 Q82,60 75,70 Q78,80 70,90 Q72,100 65,110 Q68,120 60,130 Q55,140 50,145 Q45,140 40,130 Q35,120 38,110 Q30,100 35,90 Q28,80 35,70 Q30,60 38,50 Q35,40 42,35 Q40,25 45,20 Q50,15 55,18 Q60,15 65,18 Q70,15 75,20 Z"/>
-                        </svg>
-                    </div>
+                    <div class="card-preview preview-prefectures" style="display: flex; align-items: center; justify-content: center;"><span style="font-size: 48px; line-height: 1.2;">🎭🎬<br>🔪💕</span></div>
                 </div>
                 <div class="card-content">
                     <span class="card-badge">Prefectures</span>
@@ -664,12 +660,12 @@
             <a href="filmed_vs_represented.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
                     <div class="card-preview" style="background: linear-gradient(135deg, #9b59b6 0%, #3498db 100%); display: flex; align-items: center; justify-content: center;">
-                        <span style="font-size: 64px;">🗾</span>
+                        <span style="font-size: 64px;">🧭</span>
                     </div>
                 </div>
                 <div class="card-content">
                     <span class="card-badge">🗺️ Research</span>
-                    <h2 class="card-title">🧭 Filmed vs Mentioned</h2>
+                    <h2 class="card-title">Filmed vs Mentioned</h2>
                     <p class="card-title-jp">撮影地 vs 物語の舞台</p>
                     <p class="card-description">
                         Choropleth map comparing where films are shot vs. where narratives are set by prefecture. Toggle between views to see geographic imagination patterns.
