Refresh visualization data - 2025-12-21 21:21

--- a/comparisons_staging/index.html
+++ b/comparisons_staging/index.html
@@ -452,7 +452,7 @@
 </head>
 <body>
     <div style="background: linear-gradient(90deg, #e74c3c, #c0392b); color: white; text-align: center; padding: 12px; font-weight: 600; position: fixed; top: 0; left: 0; right: 0; z-index: 9999;">
-        ⚠️ STAGING ENVIRONMENT - Testing data suffix: <code style="background: rgba(0,0,0,0.3); padding: 2px 8px; border-radius: 4px;">91cf2adb7fdc8186</code>
+        ⚠️ STAGING ENVIRONMENT - Testing data suffix: <code style="background: rgba(0,0,0,0.3); padding: 2px 8px; border-radius: 4px;">8a9034e3f6df1c2e</code>
         &nbsp;|&nbsp; <span style="color: #2ecc71;">When ready: <code>python3 cinemap_refresh_v4.py --promote</code></span>
     </div>
     <div style="height: 45px;"></div><!-- Spacer for fixed banner -->
@@ -624,7 +624,7 @@
             <!-- Studios Comparison -->
             <a href="prefectures.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
-                    <div class="card-preview preview-prefectures" style="display: flex; align-items: center; justify-content: center;"><span style="font-size: 48px; line-height: 1.2;">🎭🎬<br>🔪💕</span></div>
+                    <div class="card-preview preview-prefectures" style="display: flex; align-items: center; justify-content: center;"><span style="font-size: 40px; line-height: 1.3;">🎭🗡️<br>💕👻</span></div>
                 </div>
                 <div class="card-content">
                     <span class="card-badge">Prefectures</span>
