--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 </div>
                 <div class="card-content">
                     <span class="card-badge">Franchise</span>
-                    <h2 class="card-title">Godzilla vs Tora-san</h2>
+                    <h2 class="card-title">🦎 Godzilla vs Tora-san 💼</h2>
                     <p class="card-title-jp">ゴジラ vs 男はつらいよ</p>
                     <p class="card-description">
                         Compare Japan's two longest-running franchises. Adjustable cluster radius reveals geographic patterns.
@@ -600,11 +600,7 @@
             <!-- Prefecture Comparison -->
             <a href="comparisons/prefectures.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
-                    <div class="card-preview preview-prefectures">
-                        <svg class="japan-silhouette" viewBox="0 0 100 150" fill="#333">
-                            <path d="M75,20 Q80,25 78,35 Q85,40 80,50 Q82,60 75,70 Q78,80 70,90 Q72,100 65,110 Q68,120 60,130 Q55,140 50,145 Q45,140 40,130 Q35,120 38,110 Q30,100 35,90 Q28,80 35,70 Q30,60 38,50 Q35,40 42,35 Q40,25 45,20 Q50,15 55,18 Q60,15 65,18 Q70,15 75,20 Z"/>
-                        </svg>
-                    </div>
+                    <div class="card-preview preview-prefectures" style="display: flex; align-items: center; justify-content: center;"><span style="font-size: 40px; line-height: 1.3;">🎭🗡️<br>💕👻</span></div>
                 </div>
                 <div class="card-content">
                     <span class="card-badge">Prefectures</span>
@@ -640,7 +636,7 @@
             <a href="comparisons/filmed_vs_represented.html" class="viz-card" style="text-decoration: none; color: inherit;">
                 <div class="card-preview-container">
                     <div class="card-preview" style="background: linear-gradient(135deg, #9b59b6 0%, #3498db 100%); display: flex; align-items: center; justify-content: center;">
-                        <span style="font-size: 64px;">🗾</span>
+                        <span style="font-size: 64px;">🧭</span>
                     </div>
                 </div>
                 <div class="card-content">
