--- a/comparisons/franchise.html
+++ b/comparisons/franchise.html
@@ -49,7 +49,7 @@
         
         .sidebar-header {
             padding: 24px 20px;
-            background: linear-gradient(135deg, #e74c3c 0%, #3498db 100%);
+            background: linear-gradient(135deg, #2ecc71 0%, #f1c40f 100%);
             text-align: center;
         }
         
@@ -327,8 +327,8 @@
         <div class="sidebar-section">
             <div class="info-panel">
                 <strong>About:</strong> Compare Japan's longest-running franchises: 
-                <strong style="color: #e74c3c">Godzilla</strong> (monster/kaiju) and 
-                <strong style="color: #3498db">Tora-san</strong> (comedy/drama).
+                <strong style="color: #2ecc71">Godzilla</strong> (monster/kaiju) and 
+                <strong style="color: #f1c40f">Tora-san</strong> (comedy/drama).
                 <br><br>
                 Use the <strong>cluster slider</strong> to adjust grouping density.
             </div>
@@ -450,7 +450,7 @@
                 const marker = L.circleMarker([coords[1], coords[0]], {
                     radius: 7,
                     fillColor: props.color,
-                    color: 'white',
+                    color: '#000',
                     weight: 2,
                     fillOpacity: 0.9
                 });
