Add District Genre Dominance splash card

--- a/index.html
+++ b/index.html
@@ -612,6 +612,23 @@
                 </div>
                 <div class="card-arrow">→</div>
             </a>
+                <!-- District Genre Dominance -->
+                <a href="comparisons/districts.html" class="viz-card">
+                    <div class="card-preview">
+                        <div class="preview-content">
+                            <span style="font-size: 64px;">🗼⛩️</span>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h3>🗼 District Genres ⛩️</h3>
+                        <p>Explore genre dominance across Tokyo's 23 wards and Kyoto's 11 districts. Toggle genres to reveal patterns beneath Drama dominance.</p>
+                        <div class="card-stats">
+                            <span>🗾 34 Districts</span>
+                            <span>🎭 15 Genres</span>
+                        </div>
+                    </div>
+                </a>
+
             
             <!-- Studios Comparison -->
             <a href="comparisons/studios.html" class="viz-card" style="text-decoration: none; color: inherit;">
