Refresh visualization data - 2025-12-26 18:26

--- a/comparisons_staging/index.html
+++ b/comparisons_staging/index.html
@@ -479,8 +479,8 @@
 </head>
 <body>
     <div style="background: linear-gradient(90deg, #e74c3c, #c0392b); color: white; text-align: center; padding: 12px; font-weight: 600; position: fixed; top: 0; left: 0; right: 0; z-index: 9999;">
-        ⚠️ STAGING ENVIRONMENT - Testing data suffix: <code style="background: rgba(0,0,0,0.3); padding: 2px 8px; border-radius: 4px;">930764b3f16e63e2</code>
-        &nbsp;|&nbsp; <span style="color: #2ecc71;">When ready: <code>python3 cinemap_refresh_v5.py --promote</code></span>
+        âš ï¸ STAGING ENVIRONMENT - Testing data suffix: <code style="background: rgba(0,0,0,0.3); padding: 2px 8px; border-radius: 4px;">3bc8c856b6a5b097</code>
+        &nbsp;|&nbsp; <span style="color: #2ecc71;">When ready: <code>python3 cinemap_refresh_v4.py --promote</code></span>
     </div>
     <div style="height: 45px;"></div><!-- Spacer for fixed banner -->
 
